force-app/main/default/objects/Salesenablement__c/Salesenablement__c.object-meta.xml
<CustomObject>
    <label>理解度テスト/アンケート</label>
    <nameField>
        <label>理解度テスト/アンケート名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>