force-app/main/default/objects/Salesenablement__c/fields/AccuracyRate__c.field-meta.xml
<CustomField>
    <fullName>AccuracyRate__c</fullName>
    <label>正解率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>