force-app/main/default/objects/Salesenablement__c/fields/appoint__c.field-meta.xml
<CustomField>
    <fullName>appoint__c</fullName>
    <label>訪問編</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>