force-app/main/default/objects/Salesenablement__c/fields/appointprepare__c.field-meta.xml
<CustomField>
    <fullName>appointprepare__c</fullName>
    <label>訪問準備編</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>