force-app/main/default/objects/Salesenablement__c/fields/gaikou__c.field-meta.xml
<CustomField>
    <fullName>gaikou__c</fullName>
    <label>外構カテゴリ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>