force-app/main/default/objects/Salesenablement__c/fields/kaisuu__c.field-meta.xml
<CustomField>
    <fullName>kaisuu__c</fullName>
    <label>回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>