force-app/main/default/objects/Salesenablement__c/fields/kisosizai__c.field-meta.xml
<CustomField>
    <fullName>kisosizai__c</fullName>
    <label>基礎資材カテゴリ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>