force-app/main/default/objects/Salesenablement__c/fields/kousei__c.field-meta.xml
<CustomField>
    <fullName>kousei__c</fullName>
    <label>鋼製下地カテゴリ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>