force-app/main/default/objects/Salesenablement__c/fields/kouzouzai__c.field-meta.xml
<CustomField>
    <fullName>kouzouzai__c</fullName>
    <label>構造材カテゴリ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>