force-app/main/default/objects/Salesenablement__c/fields/Strengthenrelationshipswithvendors__c.field-meta.xml
<CustomField>
    <fullName>Strengthenrelationshipswithvendors__c</fullName>
    <label>仕入先との関係強化編</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>