force-app/main/default/objects/Salesenablement__c/fields/syouene__c.field-meta.xml
<CustomField>
    <fullName>syouene__c</fullName>
    <label>省エネカテゴリ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>