force-app/main/default/objects/Salesenablement__c/fields/testday__c.field-meta.xml
<CustomField>
    <fullName>testday__c</fullName>
    <label>テスト実施日</label>
    <type>Date</type>
</CustomField>