force-app/main/default/objects/Salesenablement__c/fields/total__c.field-meta.xml
<CustomField>
    <fullName>total__c</fullName>
    <formula>gaikou__c  +  kisosizai__c  +  kouzouzai__c  +  kousei__c  +  syouene__c  +  sekkou__c +  appointprepare__c  +  appoint__c  +  Strengthenrelationshipswithvendors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>