force-app/main/default/objects/Salesenablement__c/fields/X1__c.field-meta.xml
<CustomField>
    <fullName>X1__c</fullName>
    <label>第 1 問：ひし形は平行四辺形？</label>
    <length>100</length>
    <type>Text</type>
</CustomField>