force-app/main/default/objects/Salesenablement__c/fields/X2__c.field-meta.xml
<CustomField>
    <fullName>X2__c</fullName>
    <label>第 2 問：必ず平行四辺形なのは？</label>
    <length>100</length>
    <type>Text</type>
</CustomField>