force-app/main/default/objects/Salesenablement__c/fields/X4__c.field-meta.xml
<CustomField>
    <fullName>X4__c</fullName>
    <label>第４問：関ケ原の戦いの西軍の大将は？</label>
    <length>100</length>
    <type>Text</type>
</CustomField>